--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Colivium</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/png">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/media414.css">
   <link rel="stylesheet" href="./assets/css/media320.css">
   <link rel="stylesheet" href="./assets/css/slider.css">
   <link rel="stylesheet" href="./assets/css/menu.css">
