--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Colivium</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/png">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/media640.css">
   <link rel="stylesheet" href="./assets/css/media414.css">
   <link rel="stylesheet" href="./assets/css/media320.css">
   <link rel="stylesheet" href="./assets/css/slider.css">
@@ -170,7 +171,7 @@
     <div class="price__wrapper">
       <table class="price__table">
         <tr>
-          <th class="price__table--characteristic">Сравнительная характеристика стоимости жизни
+          <th class="price__table--characteristic"><span class="price__table-desktop">Сравнительная характеристика</span><span class="price__table-mobile">Характеристика</span> стоимости жизни
             <br>
             <span class="price__table--coord">40 м<sup>2</sup>, м. Курская,  10 минут пешком</span>
           </th>
