--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           <div class="icon-close">
           </div>
           <ul>
-          <li><a href="#about">О нас</a></li>
-          <li><a href="#advantages">Преимущества</a></li>
-          <li><a href="#community">Сообщество</a></li>
-          <li><a href="#price">Цена</a></li>
-          <li><a href="#foto__about">Почему мы</a></li>
-          <li><a href="#map">Контакты</a></li>
+            <li><a href="#about">О нас</a></li>
+            <li><a href="#advantages">Преимущества</a></li>
+            <li><a href="#community">Сообщество</a></li>
+            <li><a href="#price">Цена</a></li>
+            <li><a href="#foto__about">Почему мы</a></li>
+            <li><a href="#map">Контакты</a></li>
           </ul>
         </div>
         <div class="background">
@@ -98,7 +98,72 @@
   </section>
   <section class="advantages" id="advantages">
     <div class="advantages__wrapper">
-      <div class="advantages__content advantages__content--top">
+      <div class="advantages__content advantages__content--top advantages__content--tablet">
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/comfort.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Стильный и уютный дизайн</p>
+        </div>
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/people.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Близкие по духу соседи</p>
+        </div>
+      </div>
+      <div class="advantages__content advantages__content--top advantages__content--tablet">
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/sofa.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Большая комната отдыха</p>
+        </div>
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/kitchen.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Современная
+            <br> кухня</p>
+        </div>
+      </div>
+      <div class="advantages__content advantages__content--top advantages__content--tablet">
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/wifi.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Неприлично быстрый wi-fi</p>
+        </div>
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/tv.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Smart TV, Netflix, PS, проектор</p>
+        </div>
+      </div>
+      <div class="advantages__content advantages__content--top advantages__content--tablet">
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/lightbulb.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Включены все
+            <br>коммунальные платежи</p>
+        </div>
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/bed.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Личная
+            <br>укомплектованная спальня</p>
+        </div>
+      </div>
+      <div class="advantages__content advantages__content--top advantages__content--tablet">
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/shelves.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Встроенная мебель</p>
+        </div>
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/clean.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Eженедельная
+            <br>уборка</p>
+        </div>
+      </div>
+      <div class="advantages__content advantages__content--top advantages__content--tablet advantages__content--tablet-bottom">
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/washing_machine.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Стиральная
+            <br> машина/сушилка</p>
+        </div>
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/detergent.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Хозяйственный средства</p>
+        </div>
+      </div>
+      <div class="advantages__content advantages__content--top advantages__content--mobile">
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/comfort.svg" alt="" class="advantages__content-img">
           <p class="advantages__content-row">Стильный и уютный дизайн</p>
@@ -125,7 +190,7 @@
           <p class="advantages__content-row">Smart TV, Netflix, PS, проектор</p>
         </div>
       </div>
-      <div class="advantages__content advantages__content--bottom">
+      <div class="advantages__content advantages__content--bottom advantages__content--mobile">
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/lightbulb.svg" alt="" class="advantages__content-img">
           <p class="advantages__content-row">Включены все
@@ -276,7 +341,27 @@
   </section>
   <section class="subscribe">
     <h2 class="subscribe__title">Подписывайся на наши новости</h2>
-    <div class="subscribe__content">
+<div class="subscribe__content subscribe__content--tablet">
+  <div class="subscribe__img">
+        <img src="./assets/img/subscribe-1-min.jpg" alt="">
+      </div>
+      <div class="subscribe__img">
+        <img src="./assets/img/subscribe-2-min.jpg" alt="">
+      </div>
+</div>
+<div class="subscribe__content subscribe__content--tablet">
+  <div class="subscribe__img">
+        <img src="./assets/img/subscribe-3-min.jpg" alt="">
+      </div>
+      <div class="subscribe__img">
+        <img src="./assets/img/subscribe-4-min.jpg" alt="">
+      </div>
+</div>
+
+
+
+
+    <div class="subscribe__content subscribe__content--mobile">
       <div class="subscribe__img">
         <img src="./assets/img/subscribe-1-min.jpg" alt="">
       </div>
