--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Colivium</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/png">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/media768.css">
   <link rel="stylesheet" href="./assets/css/media640.css">
   <link rel="stylesheet" href="./assets/css/media414.css">
   <link rel="stylesheet" href="./assets/css/media320.css">
@@ -341,26 +342,22 @@
   </section>
   <section class="subscribe">
     <h2 class="subscribe__title">Подписывайся на наши новости</h2>
-<div class="subscribe__content subscribe__content--tablet">
-  <div class="subscribe__img">
+    <div class="subscribe__content subscribe__content--tablet">
+      <div class="subscribe__img">
         <img src="./assets/img/subscribe-1-min.jpg" alt="">
       </div>
       <div class="subscribe__img">
         <img src="./assets/img/subscribe-2-min.jpg" alt="">
       </div>
-</div>
-<div class="subscribe__content subscribe__content--tablet">
-  <div class="subscribe__img">
+    </div>
+    <div class="subscribe__content subscribe__content--tablet">
+      <div class="subscribe__img">
         <img src="./assets/img/subscribe-3-min.jpg" alt="">
       </div>
       <div class="subscribe__img">
         <img src="./assets/img/subscribe-4-min.jpg" alt="">
       </div>
-</div>
-
-
-
-
+    </div>
     <div class="subscribe__content subscribe__content--mobile">
       <div class="subscribe__img">
         <img src="./assets/img/subscribe-1-min.jpg" alt="">
