--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Colivium</title>
-  <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/png">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/media912.css">
   <link rel="stylesheet" href="./assets/css/media768.css">
   <link rel="stylesheet" href="./assets/css/media640.css">
   <link rel="stylesheet" href="./assets/css/media414.css">
@@ -23,39 +23,37 @@
 <body>
   <header class="header">
     <nav class="header__nav navbar-fixed-top">
-      <div class="header__nav-wrapper">
-        <h1 class="header__nav-title">Colivium</h1>
-        <div class="menu">
-          <div class="icon-close">
-          </div>
-          <ul>
-            <li><a href="#about">О нас</a></li>
-            <li><a href="#advantages">Преимущества</a></li>
-            <li><a href="#community">Сообщество</a></li>
-            <li><a href="#price">Цена</a></li>
-            <li><a href="#foto__about">Почему мы</a></li>
-            <li><a href="#map">Контакты</a></li>
-          </ul>
+      <h1 class="header__nav-title">Colivium</h1>
+      <div class="menu">
+        <div class="icon-close">
         </div>
-        <div class="background">
-          <div class="icon-menu">
-          </div>
-        </div>
-        <ul class="header__nav-list">
-          <li class="header__nav-item"><a href="#about">О нас</a></li>
-          <li class="header__nav-item"><a href="#advantages">Преимущества</a></li>
-          <li class="header__nav-item"><a href="#community">Сообщество</a></li>
-          <li class="header__nav-item"><a href="#price">Цена</a></li>
-          <li class="header__nav-item"><a href="#foto__about">Почему мы</a></li>
-          <li class="header__nav-item"><a href="#map">Контакты</a></li>
+        <ul>
+          <li><a href="#about">О нас</a></li>
+          <li><a href="#advantages">Преимущества</a></li>
+          <li><a href="#community">Сообщество</a></li>
+          <li><a href="#price">Цена</a></li>
+          <li><a href="#foto__about">Почему мы</a></li>
+          <li><a href="#map">Контакты</a></li>
         </ul>
-        <a href="" class="header__nav-link">Записаться на собеседование</a>
       </div>
+      <div class="background">
+        <div class="icon-menu">
+        </div>
+      </div>
+      <ul class="header__nav-list">
+        <li class="header__nav-item"><a href="#about">О нас</a></li>
+        <li class="header__nav-item"><a href="#advantages">Преимущества</a></li>
+        <li class="header__nav-item"><a href="#community">Сообщество</a></li>
+        <li class="header__nav-item"><a href="#price">Цена</a></li>
+        <li class="header__nav-item"><a href="#foto__about">Почему мы</a></li>
+        <li class="header__nav-item"><a href="#map">Контакты</a></li>
+      </ul>
+      <div class="header__nav-link--cont"><a href="" class="header__nav-link">Записаться на просмотр</a></div>
     </nav>
     <div class="header__wrapper">
       <h2 class="header__title">Colivium</h2>
       <h3 class="header__subtitle">Умный образ для молодых профессионалов</h3>
-      <a href="" class="header__link">Записаться на собеседование</a>
+      <a href="" class="header__link">Записаться на просмотр</a>
     </div>
   </header>
   <section class="about" id="about">
@@ -77,8 +75,8 @@
           <div class="mySlides fade">
             <img src="./assets/img/about-5-min.jpg" style="width: 100%;" alt="">
           </div>
-          <a onclick="plusSlides(-1)" class="prev">&#10094</a>
-          <a onclick="plusSlides(1)" class="next">&#10095</a>
+          <a onclick="plusSlides(-1)" class="prev"></a>
+          <a onclick="plusSlides(1)" class="next"></a>
         </div>
         <div class="dot_box">
           <span class="dot" onclick="currentSlide(1)"></span>
@@ -90,9 +88,11 @@
       </div>
       <div class="about__text">
         <h3 class="about__text-title">Colivium</h3>
-        <p class="about__text-row">Colivium – первая сеть коливингов в Москве.</p>
-        <p class="about__text-row">Коливинг – современное комфортабельное полностью укомплектованное для жизни пространство, в котором живут близкие тебе по духу молодые профессионалы.</p>
-        <p class="about__text-row">Colivium – место, где ты обретешь дружбу.</p>
+        <p class="about__text-row"><span class="about__text-row--bold">Colivium</span> – первая сеть коливингов в Москве.</p>
+        <p class="about__text-row"><span class="about__text-row--bold">Коливинг</span> – современное комфортабельное полностью укомплектованное для жизни пространство, в котором живут близкие тебе по духу молодые профессионалы.</p>
+        <p class="about__text-row"><span class="about__text-row--bold">Colivium</span> предлагает уникальные дизайны интерьеров, создающие комфортную и уютную обстановку в доме.</p>
+        <p class="about__text-row">Спроектированные особым образом пространства помогут познакомиться с соседями, обеспечат истинное чувство общности, которого не хватает в больших городах.</p>
+        <p class="about__text-row"><span class="about__text-row--bold">Colivium</span> – место, где ты обретешь дружбу.</p>
         <a href="" class="about__text-link">Записаться на просмотр</a>
       </div>
     </div>
@@ -105,14 +105,13 @@
           <p class="advantages__content-row">Стильный и уютный дизайн</p>
         </div>
         <div class="advantages__content-item">
-          <img src="./assets/img/advantages_icon/people.svg" alt="" class="advantages__content-img">
-          <p class="advantages__content-row">Близкие по духу соседи</p>
+          <img src="./assets/img/advantages_icon/bed.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Личная
+            <br>укомплектованная спальня</p>
         </div>
-      </div>
-      <div class="advantages__content advantages__content--top advantages__content--tablet">
         <div class="advantages__content-item">
-          <img src="./assets/img/advantages_icon/sofa.svg" alt="" class="advantages__content-img">
-          <p class="advantages__content-row">Большая комната отдыха</p>
+          <img src="./assets/img/advantages_icon/shelves.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Встроенная мебель</p>
         </div>
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/kitchen.svg" alt="" class="advantages__content-img">
@@ -129,6 +128,14 @@
           <img src="./assets/img/advantages_icon/tv.svg" alt="" class="advantages__content-img">
           <p class="advantages__content-row">Smart TV, Netflix, PS, проектор</p>
         </div>
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/people.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Близкие по духу соседи</p>
+        </div>
+        <div class="advantages__content-item">
+          <img src="./assets/img/advantages_icon/sofa.svg" alt="" class="advantages__content-img">
+          <p class="advantages__content-row">Домашний менеджер</p>
+        </div>
       </div>
       <div class="advantages__content advantages__content--top advantages__content--tablet">
         <div class="advantages__content-item">
@@ -137,23 +144,10 @@
             <br>коммунальные платежи</p>
         </div>
         <div class="advantages__content-item">
-          <img src="./assets/img/advantages_icon/bed.svg" alt="" class="advantages__content-img">
-          <p class="advantages__content-row">Личная
-            <br>укомплектованная спальня</p>
-        </div>
-      </div>
-      <div class="advantages__content advantages__content--top advantages__content--tablet">
-        <div class="advantages__content-item">
-          <img src="./assets/img/advantages_icon/shelves.svg" alt="" class="advantages__content-img">
-          <p class="advantages__content-row">Встроенная мебель</p>
-        </div>
-        <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/clean.svg" alt="" class="advantages__content-img">
           <p class="advantages__content-row">Eженедельная
             <br>уборка</p>
         </div>
-      </div>
-      <div class="advantages__content advantages__content--top advantages__content--tablet advantages__content--tablet-bottom">
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/washing_machine.svg" alt="" class="advantages__content-img">
           <p class="advantages__content-row">Стиральная
@@ -164,7 +158,7 @@
           <p class="advantages__content-row">Хозяйственный средства</p>
         </div>
       </div>
-      <div class="advantages__content advantages__content--top advantages__content--mobile">
+      <!--    <div class="advantages__content advantages__content--top advantages__content--mobile">
         <div class="advantages__content-item">
           <img src="./assets/img/advantages_icon/comfort.svg" alt="" class="advantages__content-img">
           <p class="advantages__content-row">Стильный и уютный дизайн</p>
@@ -220,16 +214,22 @@
           <img src="./assets/img/advantages_icon/detergent.svg" alt="" class="advantages__content-img">
           <p class="advantages__content-row">Хозяйственный средства</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
   <section class="community" id="community">
     <div class="community__wrapper">
       <div class="community__content">
         <div class="community__empty"></div>
-        <p class="community__row">Ты будешь приглашен на все
-          <br>мероприятия сообщества
-          <br>Colivium</p>
+        <div class="community__text">
+          <h3 class="community__title">Cообщество Colivium</h3>
+          <p class="community__row">Ты будешь приглашен на все
+            <br>мероприятия сообщества
+            <br>Colivium</p>
+          <p class="community__row">Твоя жизнь станет насыщенной и интересной </p>
+          <p class="community__row">Ты сделаешь Colivium ярче</p>
+          <p class="community__row">Все мероприятия и новости Colivium в одном приложении</p>
+        </div>
       </div>
     </div>
   </section>
@@ -241,21 +241,21 @@
             <br>
             <span class="price__table--coord">40 м<sup>2</sup>, м. Курская,  10 минут пешком</span>
           </th>
-          <th class="pricer__table--th-color">Новая современная квартира</th>
-          <th>Colivium</th>
-          <th class="pricer__table--th-color">Дешевая квартира</th>
+          <th class="pricer__table--th-color">Новая современная квартира<br><span style="font-size: 12px; color: #aaa;">тыс. рублей/мес</span></th>
+          <th>Colivium<br><span style="font-size: 12px; color: #aaa;">тыс. рублей/мес</span></th>
+          <th class="pricer__table--th-color">Дешевая квартира<br><span style="font-size: 12px; color: #aaa;">тыс. рублей/мес</span></th>
         </tr>
         <tr>
           <td>Стоимость аренды:</td>
-          <td>60 000 руб/мес</td>
-          <td class="pricer__table--colivium">49 000 руб/мес</td>
-          <td>38 000 руб/мес</td>
+          <td>60</td>
+          <td class="pricer__table--colivium">49</td>
+          <td>38</td>
         </tr>
         <tr>
           <td>Коммунальные платежи:</td>
           <td>Включено</td>
           <td class="pricer__table--colivium">Включено</td>
-          <td>5 000 руб/мес</td>
+          <td>5</td>
         </tr>
         <tr>
           <td>Стиральная
@@ -266,13 +266,13 @@
         </tr>
         <tr>
           <td>Еженедельная уборка:</td>
-          <td>8 000 руб/мес</td>
+          <td>8</td>
           <td class="pricer__table--colivium">Включено</td>
-          <td>8 000 руб/мес</td>
+          <td>8</td>
         </tr>
         <tr>
           <td>Хозяйственные товары:</td>
-          <td>5 000 руб/мес</td>
+          <td>5</td>
           <td class="pricer__table--colivium">Включено</td>
           <td></td>
         </tr>
@@ -280,7 +280,7 @@
           <td>Супербыстрый Wifi:</td>
           <td>Включено</td>
           <td class="pricer__table--colivium">Включено</td>
-          <td>2000 руб /мес</td>
+          <td>2</td>
         </tr>
         <tr>
           <td>Укомплектованное место для работы:</td>
@@ -290,9 +290,9 @@
         </tr>
         <tr>
           <td class="price__table--total">ИТОГО:</td>
-          <td>73 000 руб/мес</td>
-          <td class="pricer__table--color">49 000 руб/мес</td>
-          <td>55 000 руб/мес</td>
+          <td>73</td>
+          <td class="pricer__table--color">49</td>
+          <td>55</td>
         </tr>
       </table>
     </div>
@@ -303,15 +303,15 @@
         <h2 class="foto__about-content-item--title">Стильные общественные пространства создают уютную дружелюбную атмосферу</h2>
       </div>
       <div class="foto__about-content-item foto__about-content-item--2">
-        <h2 class="foto__about-content-item--title">Мы становимся похожими на тех, с кем общаемся</h2>
+        <h2 class="foto__about-content-item--title">Общайся и отдыхай с друзьями после рабочего дня</h2>
       </div>
     </div>
     <div class="foto__about-content">
       <div class="foto__about-content-item foto__about-content-item--3">
-        <h2 class="foto__about-content-item--title">Современные и тихие стиральные машины и сушки со всеми хозяйственными средствами</h2>
+        <h2 class="foto__about-content-item--title">Для тебя работают современные тихие стиральные машины и сушилки</h2>
       </div>
       <div class="foto__about-content-item foto__about-content-item--4">
-        <h2 class="foto__about-content-item--title">Высокоскоростной wifi , кабельное телевидение, подписка Netflix, все это входит в стоимость проживания</h2>
+        <h2 class="foto__about-content-item--title">В доме летает wifi, подключено кабельное телевидение, подписка Netflix, и все это уже включено в стоимость</h2>
       </div>
     </div>
     <div class="foto__about-content">
@@ -319,7 +319,8 @@
         <h2 class="foto__about-content-item--title">Делись своими креативными и профессиональными идеями с близкими по духу людьми! Генерируй и создавай!</h2>
       </div>
       <div class="foto__about-content-item foto__about-content-item--6">
-        <h2 class="foto__about-content-item--title">Отдыхайте и готовьте вместе на укомплектованной кухне</h2>
+        <h2 class="foto__about-content-item--title">Отдыхай и готовь вместе с друзьями
+на укомплектованной кухне</h2>
       </div>
     </div>
   </section>
@@ -327,7 +328,7 @@
     <div class="map__content">
       <h3 class="map__content-title map__content-title--mobile">Colivium’s map</h3>
       <div class="map__content-map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.0037248227895!2d37.65823081519195!3d55.75843749902588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a8dd1a8f359%3A0x562114fc3541cfb1!2z0JrRg9GA0YHQutCw0Y8!5e0!3m2!1sru!2sru!4v1518996220798" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen class="map_desktop"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.1248266115776!2d37.66304199191216!3d55.73896008660065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54ac2c08c21f9%3A0x266d8627cbdd9a15!2z0KLQsNCz0LDQvdGB0LrQsNGPINGD0LsuLCAzMi8xLCDQnNC-0YHQutCy0LAsIDEwOTE0Nw!5e0!3m2!1sru!2sru!4v1519064835492" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
       <div class="map__content-text">
         <h3 class="map__content-title map__content-title--desktop">Colivium’s map</h3>
